compiler/src/test/resources/diagnostics/contributesservice/qualifierRequired.kt
// RENDER_DIAGNOSTICS_FULL_TEXT
package com.test

import com.squareup.services.anvil.ContributesService

<!CONTRIBUTES_SERVICE_ERROR!>@ContributesService(Unit::class)<!>
interface Service
